--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,5 +8,7 @@
     <h1><%= title %></h1>
     <p>Bem vindo a <%= title %></p>
     <p>Ainda não há documentação</p>
+    <br>
+    <small>Criado por Filipe Frozza</small>
   </body>
 </html>
