--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,6 @@
     <p>Bem vindo a <%= title %></p>
     <p>Ainda não há documentação</p>
     <br>
-    <small>Criado por Filipe Frozza</small>
+    <small>Criado por Filipe Frozza!</small>
   </body>
 </html>
