--- a/views/teste.ejs
+++ b/views/teste.ejs
@@ -1,11 +1,17 @@
 <html>
     <head>
-
+        <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
     </head>
     <body>
-        <form action="http://localhost:3001/api/v1/perfil/upload" method="POST" enctype='multipart/form-data'>
-            <input type="file" name="cu">
-            <button type="submit">Enviar</button>
-        </form>
+        
+        <script>
+            socket = io.connect('http://localhost:3001');
+
+            socket.on('postback555', function(m){
+                objeto = JSON.parse(m);
+
+                console.log(objeto);
+            });    
+        </script>
     </body>
 </html>
